# blursed_bot

./: .env.example  .gitignore  .travis.yml  Cargo.toml  LICENSE  Procfile  README.md  app.json
examples/: arc.rs  dyn.rs  function-args.rs  macros.rs  rc.rs  ref-cell.rs  references-copy.rs  thread.rs
src/: main.rs
src/chat/: handler.rs  slack.rs
src/data/: search.rs
src/net/: auth.rs  mod.rs  reddit_client.rs
src/shared/: config.rs
