[package]
name = "blursed_bot"
version = "0.1.0"
authors = ["Jason Shin <visualbbasic@gmail.com>", "Matt Harvey <software@matthewharvey.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "2"
reqwest = "0.9.22"
serde = "1.0.103"
