[package]
name = "blursed_bot"
version = "0.1.0"
authors = ["Jason Shin <visualbbasic@gmail.com>", "Matt Harvey <software@matthewharvey.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
slack = "0.22.0"
actix-rt = "1"
actix-web = "2"
reqwest = "0.9.22"
serde = "1.0.103"
serde_json = "1.0.44"
dotenv = "0.15.0"
rand = "0.6.5"
